# agentic-graph-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  TODO.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: __init__.py  fetch_novelqa_dataset.py  fetch_recent_papers.py  index_arxiv_dataset.py  load_sr_rag_datasets.py
src/agentic_graph_rag/: cli.py  config.py  main.py  runner.py
src/agentic_graph_rag/agent/: __init__.py  controller.py  session.py  state.py  tools.py  tracer.py
src/agentic_graph_rag/eval/: __init__.py  context.py  judge.py  loaders.py  metrics.py  runner.py  types.py
src/agentic_graph_rag/graph/: base.py  neo4j_client.py
src/agentic_graph_rag/llm/: __init__.py  base.py  openai_client.py
src/agentic_graph_rag/prompts/: __init__.py  manager.py  templates.py
tests/: conftest.py  test_cli.py  test_config.py  test_integration_neo4j.py  test_integration_openai.py  test_main.py  test_openai_client.py  test_runner.py
tests/test_agent/: test_controller.py  test_session.py  test_tools.py  test_tracer.py
tests/test_eval/: test_context.py  test_judge.py  test_loaders.py  test_metrics.py  test_runner.py
tests/test_graph/: test_neo4j_client.py
tests/test_prompts/: test_manager.py
tests/test_retriever/: test_cypher_retriever.py  test_hybrid_retriever.py  test_integration_cypher_retriever.py
tests/test_scripts/: test_arxiv_client.py  test_index_arxiv_dataset.py  test_load_sr_rag_datasets.py
tests/test_ui/: test_terminal.py
tests/test_vector/: test_qdrant_client.py
(+15 files in other folders)
